# compose

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: interface.rs  interpreter.rs  main.rs  read_evaluate_print_loop.rs
command-line-interface/: Cargo.toml
command-line-interface/src/: interface.rs  read_evaluate_print_loop.rs
compose_core/: Cargo.toml
compose_core/src/: functions.rs  integer.rs  namespace.rs  syntax.rs  term.rs  virtual_machine.rs
compose_core/src/syntax/: unresolved_term.rs
compose_core/src/virtual_machine/: combinator.rs  control.rs  data.rs
compositor/: Cargo.toml
compositor/src/: interpreter.rs  main.rs
core/: Cargo.toml
core/src/: combinator.rs  data.rs  environment.rs  function.rs  functions.rs  integer.rs  lib.rs  namespace.rs  parser.rs  stack.rs  term.rs  terms.rs  virtual_machine.rs
core/src/parser/: unresolved_function.rs  unresolved_term.rs
core/src/syntax/: syntax_error.rs  unresolved_function.rs  unresolved_term.rs
core/src/virtual_machine/: combinator.rs  control.rs  control_action.rs  control_frame.rs  control_stack.rs  data.rs  data_stack.rs  function.rs  function_storage.rs  integer.rs  namespace.rs  old_function.rs  stack.rs  term.rs  terms.rs
vm/: Cargo.toml
vm/src/parser/: parse_identifier.rs  parser_error.rs
vm/src/virtual_machine/: combinator.rs  data.rs  function.rs  namespace.rs  stack.rs  term.rs
