# Copyright Rob Gage 2025

[package]
name = "compose_core"
version = "0.1.1"
license = "MIT"
description = "The Compose Language implementation"
readme = "../README.md"
repository = "https://github.com/rob-gage/compose"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
pups = "0.1.13"
smallvec = "1.15.1"
