# Copyright Rob Gage 2025

[package]
name = "compositor"
version = "0.1.0"
license = "MIT"
description = "An interactive environment for the Compose language"
readme = "../README.md"
repository = "https://github.com/Compose-Language/compose"
edition = "2021"

[[bin]]
name = "cmpstr"
path = "src/main.rs"

[dependencies]
compose_core = { version = "0.0.0", path = "../core" }
pups = "0.1.13"
rustyline = "17.0.0"
