# Copyright Rob Gage 2025

[package]
name = "compositor"
version = "0.1.1"
license = "MIT"
description = "An interactive environment for the Compose language"
readme = "../README.md"
repository = "https://github.com/rob-gage/compose"
edition = "2021"

[[bin]]
name = "cmpstr"
path = "src/main.rs"

[dependencies]
colored = "3.0.0"
compose_core = { version = "0.1.1", path = "../compose_core" }
pups = "0.1.13"
rustyline = "17.0.0"
