# Copyright Rob Gage 2025

[package]
name = "compose_core"
version = "0.0.0"
license = "MIT"
description = "The virtual machine for the Compose language"
readme = "../README.md"
repository = "https://github.com/Compose-Language/compose"
edition = "2021"

[dependencies]
codespan-reporting = "0.12.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pups = "0.1.13"
smallvec = "1.15.1"
