# Copyright Rob Gage 2025

[package]
name = "compose_vm"
version = "0.0.1"
license = "MIT"
description = "The virtual machine for the Compose language"
readme = "../README.md"
repository = "https://github.com/Compose-Language/compose"
edition = "2021"

[lib]
name = "compose_vm"
path = "src/lib.rs"

[dependencies]
codespan-reporting = "0.12.0"
nom = "8.0.0"
rug = "1.27.0"
smallvec = "1.15.1"
